syntax = "proto2";
option java_package = "com.message.protocol";
option java_outer_classname = "Message";

message PB {

	enum SystemKey{
		CS_USER_CONNECT_TO_SERVER = 1;
		SC_USER_CONNECT_TO_SERVER_SUCCESS = 2;
		SC_USER_CONNECT_TO_SERVER_FAIL = 3;

		CS_USER_DISCONNECT = 4;

		CS_USER_RECONNECTION_TRY = 5;
		SC_USER_RECONNECTION_SUCCESS = 6;
		SC_USER_RECONNECTION_FAIL = 7;

		CS_USER_ENTER_WORLD =8;
		SC_USER_ENTER_WORLD =9;
	}

	enum MessageKey {
					PB = 101;
			CS_CHAT = 102;
			CS_CHAT_PRV = 103;
			CS_CREATE_USER = 118;
			CS_ENTER_AREA = 104;
			CS_ENTER_GRID = 105;
			CS_GET_AREA_LIST = 106;
			CS_GET_GRID_LIST = 107;
			CS_LOGIN = 108;
			CS_REGISTER = 109;
			SC_CHAT = 110;
			SC_CHAT_PRV = 111;
			SC_CREATE_USER = 119;
			SC_ENTER_AREA = 112;
			SC_ENTER_GRID = 113;
			SC_GET_AREA_LIST = 114;
			SC_GET_GRID_LIST = 115;
			SC_LOGIN = 116;
			SC_REGISTER = 117;
	}

}